# AICSZL2026

./: .gitignore  README.md  pyproject.toml
configs/: features.yaml  settings.yaml
configs/experiments/: base5_wide_rebuild_202607.yaml  pv_5_vs_10_executable_5d_202607.yaml
docs/operations/: incremental_experiment_runbook.md
docs/research/: alpha101_candidate_features.md  retired_feature_directions.md
scripts/: benchmark_tushare_fetch_speed.py  run_experiment.py  run_model_random_backtest.py  smoke_task3_to_6.py
src/aicszl/: __init__.py  artifact_cache.py  cli.py
src/aicszl/backtests/: __init__.py  base.py  dataset.py  plotting.py  qlib_adapter.py
src/aicszl/blends/: __init__.py  runner.py
src/aicszl/config/: __init__.py  feature_groups.py  settings.py
src/aicszl/datasets/: __init__.py  assembly.py
tests/: test_artifact_cache.py  test_backtest_adapter.py  test_backtest_dataset.py  test_backtest_plotting.py  test_blends.py  test_builtin_features.py  test_cli.py  test_config.py  test_dataset_assembly.py  test_experiment_comparison.py  test_experiment_config.py  test_experiment_manifest.py  test_experiment_runner.py  test_experiment_script.py  test_experiment_timing.py  test_feature_groups.py  test_feature_history.py  test_feature_registry.py  test_feature_store.py  test_feature_updater.py  test_model_random_backtest_script.py  test_prediction.py  test_price_volume_features.py  test_qlib_adapter.py  test_raw_store.py  test_raw_updater.py  test_smoke_script.py  test_targets.py  test_training.py  test_tushare_client.py  test_wide_feature_store.py
(+24 files in other folders)
