[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aicszl2026"
version = "0.1.0"
description = "AICSZL2026 A-share daily research workflow"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0,<3",
    "pyqlib==0.9.7",
    "PyYAML>=6.0",
    "scikit-learn>=1.3",
    "tushare>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
aicszl = "aicszl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
